linked the css file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <nav id="navbar">
-    <head> <link rel="stylesheet" href="/project-1/style1.css">
+    <head> <link rel="stylesheet" href="style1.css">
    </head>
 <script src="https://upload.wikimedia.org/wikipedia/commons/4/4b/H.G._Wells_by_Beresford.jpg"></script>
 
